+ Implementazione interfaccia: Appendix B.
---------------------------------------------------------------------------------- 
crmapp-2.1.3		    xx-xx-2016

---------------------------------------------------------------------------------- 
crmapp-2.1.2		    30-09-2016
- Implementazione GridView (capitolo 11):
 - creata colonna per funzionalita' popover: app\utilities\AuditColumn.
   - Risolto errore get non object property dovuto al fatto che alcuni 
     record di customer avevano updated_by NULL!!
 - Inserite colonne address, phone and email.
- Messo in rem il codice per comprimere gli asset: Ci sono problemi con i 
  riferimenti delle immagini nei css.
+ Verificare compressione asset con jar aggiornati.
- Chiusa versione:
  >git add .
  >git commit -m "crmapp-2.1.2"
  >git push origin master
---------------------------------------------------------------------------------- 
crmapp-2.1.1		    28-09-2016
- Messo in rem require_once class.utility.php in index.php.
- rename leggimi.txt in changelog.txt
- Ricreato CRUD per tabella 'customer' per includere behavior capitolo 10:
  model class        : app\models\customer\CustomerRecord
  Search model class : app\models\customer\CustomerRecordSearch
  controller class   : app\controllers\CustomerRecordsController
  view path          : @app/views/customer-records
  Eseguito overwrite.
- Migliorata leggibilita azioni Create e Update di CustomerRecordsController
- Test inserimento record nelle varie tabelle: ok.
- Chiusa versione:
  >git add .
  >git commit -m "crmapp-2.1.1"
  >git push origin master
---------------------------------------------------------------------------------- 
crmapp-2.1.0		    20-09-2016
- Su windows 7 starter i test acceptance falliscono: errore porta 7055
- Trasferito da windows7 crmapp su windows 10 professional : 
  >./yii migrate ( per campi created_at, ecc. )
  >cept run functional: Ok
  >cept run acceptance QueryCustomerByPhoneNumberCept: OK   
  >composer update : Ok 