@@ -75,7 +75,9 @@ $this->params['breadcrumbs'][] = $this->title;
                     }
             ],
 
-            ['class' => 'app\utilities\AuditColumn'], 
+            ['class' => 'app\utilities\AuditColumn',
+			 'attribute' => 'id'
+			], 
             ['class' => 'yii\grid\ActionColumn'],
         ],
     ]); ?>
